--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -23,7 +24,7 @@
 		padding-bottom: 30px;    /* height of footer */
 	}
 
-	footer{
+	.footer{
 		height: 30px; 
 		width:100%;
 		position: absolute;
