change to: hosted on GitHub

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		padding-bottom: 30px;    /* height of footer */
 	}
 
-	.footer{
+	footer{
 		height: 30px; 
 		width:100%;
 		position: absolute;
@@ -150,7 +150,7 @@
 		<p class="text-center">
 		<span><small>Last modified: Mar. 23, 2015</small></span>
 		<span><img src="http://counter8.allfreecounter.com/private/freecounterstat.php?c=c1f30b8a3383ddaf9db9be2311bfde48" border="0" title="free hit counter" alt="free hit counter"></span>
-		<span><small>Hosted on <a href="#" id="a_000webhost">000webhost</a></small></span>
+		<span><small>Hosted on <a href="https://github.com/hongkailiu/hongkailiu.github.io" id="a_hostedOn">GitHub</a></small></span>
 		<!--
 		<span>Copyright &copy; 2015 Hongkai Liu</span>
 		
