--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 				<div class="tab-pane active" id="home">
 					<h2 id="h2_you_know"></h2>
 					<div id="d_place"></div>
+					<div id="d_place_map"><a target="_blank" href="i/place-map.png"><img src="i/place-map.png" style="width: 600px;padding: 6px;"/></a></div>
 					<div id="d_jp"></div>
 					<div> <a href="file/resume.pdf" id="a_resume"></a>,  <a href="file/publication.pdf" id="a_pub"></a></div>
 					<div> <img class="imgsocial" alt="github-icon" src="i/github-icon.png" />
