--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+	<meta name="keywords" content="Hongkai Liu">
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -92,7 +93,12 @@
 			<div id="my-tab-content" class="tab-content">
 				<div class="tab-pane active" id="home">
 					<h2 id="h2_you_know"></h2>
-					<div id="d_place"></div>
+					<div id="d_place">
+						<span id="s_mtl"></span> &#8592;
+						<span id="s_bj"></span> &#8592;
+						<span id="s_dd"></span> &#8592;
+						<span id="s_as"></span>
+					</div>
 					<div id="d_place_map"><a target="_blank" href="i/place-map.png"><img src="i/place-map.png" style="width: 600px;padding: 6px;"/></a></div>
 					<div id="d_jp"></div>
 					<div> <a href="file/resume.pdf" id="a_resume"></a>,  <a href="file/publication.pdf" id="a_pub"></a></div>
