--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 						<span id="s_as"></span>
 					</div>
 					<div id="d_place_map"><a target="_blank" href="i/place-map.png"><img src="i/place-map.png" style="width: 600px;padding: 6px;"/></a></div>
-					<div id="d_jp"></div>
+					<div id="d_jt"></div>
 					<div> <a href="file/resume.pdf" id="a_resume"></a>,  <a href="file/publication.pdf" id="a_pub"></a></div>
 					<div> <img class="imgsocial" alt="github-icon" src="i/github-icon.png" />
 							<button type="button" class="btn btn-link btn-xs" id="btn_github"></div>
