--- a/test/pfio.html
+++ b/test/pfio.html
@@ -127,7 +127,7 @@ $(document).ready(function(){
 			        myData1.push((value.iteration_data.latency.lat[0]).mean);
 			        break;
 			    case "slat":
-			        myData1.push((value.iteration_dat.latency.slat[0]).mean);
+			        myData1.push((value.iteration_data.latency.slat[0]).mean);
 			        break;
 			    default:
 			        myData1.push((value.iteration_data.throughput.iops_sec[0]).mean);
