--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.f0b28ad581a97540732f.css"></head>
+<link rel="stylesheet" href="styles.791f7b81787cfa73f309.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.26209474bfa8dc87a77c.js"></script><script type="text/javascript" src="es2015-polyfills.c5dd28b362270c767b34.js" nomodule></script><script type="text/javascript" src="polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="main.e265798c449d29fbd915.js"></script></body>
+<script src="runtime.689ba4fd6cadb82c1ac2.js" defer></script><script src="polyfills-es5.0ecc3084d5d859212698.js" nomodule defer></script><script src="polyfills.b92512414fe9a523c902.js" defer></script><script src="main.308a8ba708da0c49cf89.js" defer></script></body>
 </html>
